# TopDownShooterECS

./: .gitignore  build_codegen.sh  build_script.bat  build_script.sh  ecs_documentation.txt  engine_documentation.txt  readme.md  readme.txt  run_script.bat  run_script.sh
Builds/TopDownShooter/: imgui.ini
Builds/TopDownShooter/Shaders/: fog.glsl  quad.glsl  sprite.glsl
Builds/win/dbg/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
Builds/win/dbg/Common/: cmake_install.cmake
Builds/win/dbg/TopDownShooter/: cmake_install.cmake
Projects/: CMakeLists.txt
Projects/Common/: CMakeLists.txt
Projects/Common/Sources/: 3dmath.h  common.cpp  common.h  main.cpp
Projects/Common/Sources/Application/: application.cpp  application.h  application_data.h  context.cpp  context.h
Projects/Common/Sources/Engine/: input.cpp  input.h  time.h  transform2d.cpp  transform2d.h
Projects/Common/Sources/Engine/Profiler/: profiler.cpp  profiler.h
Projects/Common/Sources/Engine/Render/: sprite.cpp  sprite.h  sprite_sheet.cpp  sprite_sheet.h  vertex_array_object.h  world_renderer.cpp  world_renderer.h
Projects/Common/Sources/Engine/Render/Shader/: shader.cpp  shader.h  shader_codegen.cpp  shader_compile.cpp  shader_factory.cpp  shader_gen.h
Projects/Common/Sources/Engine/Render/Texture/: stb_image.h  texture.cpp  texture.h  texture2d.cpp  texture2d.h
Projects/Common/Sources/SDL2/: SDL_syswm.h
Projects/Common/Sources/Systems/: common_ui.inl  entity_viewer.inl  profiler.inl
Projects/Common/Sources/ecs/: base_types.h  ecs.h  ecs_core.cpp  ecs_core.h  ecs_event.h  ecs_scene.cpp  ecs_scene.h  ecs_tag.h  singleton.h  system_order.h  system_tag.h
Projects/Common/Sources/ecs/manager/: archetype.cpp  archetype.h  compile_time_string.h  component_container.cpp  component_container.h  component_function.h  core_interface.cpp  core_interface.h  entity_container.cpp  entity_container.h  entity_id.cpp  entity_id.h  entity_pull.cpp  entity_pull.h  is_vector.h  string_hash.h  system_description.cpp  system_description.h  type_description.cpp  type_description.h  type_info.cpp  type_info.h
Projects/Common/Sources/glad/: glad.c  glad.h
Projects/ECSCodeGen/: CMakeLists.txt
Projects/ECSCodeGen/Sources/: main.cpp
Projects/TopDownShooter/: CMakeLists.txt
Projects/TopDownShooter/Shaders/: healthbar.glsl  quad.glsl  sprite.glsl
Projects/TopDownShooter/Sources/: audio_pool.h  camera.cpp  camera.h  camera_update.inl  constants.h  controls.inl  core_logic.inl  game_data.cpp  game_data.h  game_logic.h  game_logic.inl  game_structs.h  init_game.inl  init_game_event.h  init_scene.inl  particles_system.h  particles_system.inl  physics.inl  prerender.inl  random.cpp  random.h  relative_updates.inl  render.inl  sound_system.inl  sprite_sheets_pool.h  sprite_updates.inl  sprites_pool.h  textures_pool.h  ui.inl
Projects/TopDownShooter/Sources/Sound/: sound_channel.cpp  sound_channel.h  sound_effect.cpp  sound_effect.h  sound_effects_factory.cpp  sound_effects_factory.h
